src/objects/SPE_ScorecardGenerator__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Buffer Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdhocScorecardName__c</fullName>
        <label>Scorecard Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AggregationType__c</fullName>
        <label>Aggregation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Average</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average by Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average by Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules Driven Averaging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aggregation_Period_Adhoc__c</fullName>
        <label>Aggregation Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisplaySpend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Spend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayUnits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayValues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Month__c</fullName>
        <label>End Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <picklist>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FrequencyInMonths__c</fullName>
        <label>Frequency In Months</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsAutoApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Computed_Day__c</fullName>
        <inlineHelpText>Next Computed Day is computed from the Date Of Execution of related SPE Trackers.</inlineHelpText>
        <label>Next Computed Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <picklist>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA Blade Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA Embedded Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA HW Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browsing Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPX5000 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit Switched Data Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3300 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAXnode 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 220 Compact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <picklist>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-8100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1180 MP SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1180 TM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1200-x SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-2140 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-2200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-4100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1180 MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1180 TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1200-x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-2140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-4100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-8100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-8100 (old)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <picklist>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS hiG1100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS hiR 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS hiR 220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS hiR200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS hiR200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Commander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Commander HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Commander OEM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Commander SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VoC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VoIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windiskus SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE 9200 S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 CCGE HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 CP113E HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 LTGP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 MBD HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 MCP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 PM HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 SND HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 SSNC HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 STMI HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiE9200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiG 1600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiG 1600 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiG 1600 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiG 1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hiG 1800 HW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RangeEndDate__c</fullName>
        <label>Range End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RangeStartDate__c</fullName>
        <label>Range Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScorecardTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Template</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>SPE_ScorecardTemplate__c.Stage__c</field>
                <operation>equals</operation>
                <value>Published</value>
            </filterItems>
            <filterItems>
                <field>SPE_ScorecardTemplate__c.Stage__c</field>
                <operation>equals</operation>
                <value>Pilot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_ScorecardTemplate__c</referenceTo>
        <relationshipLabel>Scorecard Generators</relationshipLabel>
        <relationshipName>Scorecard_Generators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scorecard_Generator_Code__c</fullName>
        <displayFormat>ScGen-{000000}</displayFormat>
        <label>Scorecard Generator Sequential ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Scorecard_Generator_Sequential_ID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Scorecard_Generator_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scorecard Generator Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecardtemplate_Stage__c</fullName>
        <formula>TEXT(ScorecardTemplate__r.Stage__c)</formula>
        <label>Scorecardtemplate_Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <picklist>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeFrame__c</fullName>
        <label>Aggregation Duration</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isAdhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAdhoc?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAutoDistributionON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAutoDistributionON</label>
        <type>Checkbox</type>
    </fields>
    <label>Scorecard Generator</label>
    <nameField>
        <label>Generate Score Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Generators</pluralLabel>
    <recordTypes>
        <fullName>Adhoc_Record_Type</fullName>
        <active>true</active>
        <label>Adhoc Record Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SPE2_Buffer_Days_Validation</fullName>
        <active>true</active>
        <description>Buffer Days Validation</description>
        <errorConditionFormula>OR(ISBLANK(Additional_Days__c),Additional_Days__c &lt;= 0)</errorConditionFormula>
        <errorMessage>Buffer Days should be greater than or equal to 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_checkAutoDistribute</fullName>
        <active>false</active>
        <description>&quot;Auto Distribute&quot; can be checked only if &quot;Auto Approval&quot; is true.</description>
        <errorConditionFormula>IsAutoApproved__c == False &amp;&amp; isAutoDistributionON__c == True</errorConditionFormula>
        <errorMessage>&quot;Auto Distribute&quot; can be checked only if &quot;Auto Approval&quot; is true.</errorMessage>
    </validationRules>
</CustomObject>